--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@syncfusion/ej2-vue-charts": "^26.2.10",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
