--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
+    "chart.js": "^4.4.4",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
+    "three": "^0.167.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
