--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "register-service-worker": "^1.7.2",
     "three": "^0.167.1",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
